# string-art

./: .gitignore  README.md  pyproject.toml
stringart/: __init__.py  autotune.py  chords.py  cli.py  detect.py  geometry.py  hole.py  metrics.py  pattern_init.py  preprocess.py  solver.py  visualize.py
stringart.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
stringart/scripts/: render_nails.py
